fix-header-position-bug

--- a/src/css/1-header.css
+++ b/src/css/1-header.css
@@ -1,6 +1,6 @@
 .header {
   border-bottom: 1px solid rgba(12, 12, 12, 0.1);
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
