--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -39,7 +39,7 @@
               " type="image/png" />
             <source media="(min-width: 768px)" srcset="
                 ../images/catalog/catalog_tablet_2.png    1x,
-                ../images/catalog/catalog_tablet_2@2x.png
+                ../images/catalog/catalog_tablet_2@2x.png 2x
               " type="image/png" />
             <img class="catalog-img" src="../images/catalog/catalog_2.png" alt="Garmin Fenix 7X Pro" width="208"
               height="226" loading="lazy" />
