--- a/src/css/4-catalog.css
+++ b/src/css/4-catalog.css
@@ -93,6 +93,10 @@
     background: #1f3cd4;
 }
 
+.catalog-btn-none {
+    display: none;
+}
+
 @media screen and (min-width: 768px) {
 
     .catalog {
