--- a/src/css/8-contact-us.css
+++ b/src/css/8-contact-us.css
@@ -17,7 +17,7 @@
 @media only screen and (min-width: 1280px) {
   .contact-container {
     display: flex;
-    gap: 40px;
+    align-items: center;
   }
 }
 .contact-title {
@@ -86,11 +86,12 @@
   display: flex;
   flex-direction: column;
   gap: 18px;
-  padding: 48px 28px;
+  padding: 28px;
 }
 @media only screen and (min-width: 768px) {
   .contact-form {
     padding: 50px 122px;
+    padding-top: 32px;
   }
 }
 @media only screen and (min-width: 1280px) {
@@ -108,6 +109,7 @@
   padding: 12px 14px 12px 14px;
   height: 42px;
   width: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media only screen and (min-width: 768px) {
   .contact-input-field {
@@ -155,6 +157,7 @@ textarea::placeholder {
   scroll-behavior: unset;
   overflow-x: hidden;
   overflow-y: hidden;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media only screen and (min-width: 768px) {
   .contact-comment-input {
@@ -189,12 +192,15 @@ textarea::placeholder {
   color: var(--background);
   cursor: pointer;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 10px;
 }
 @media only screen and (min-width: 768px) {
   .contact-modal-button {
     padding: 17px 63px;
     width: 160px;
     height: 52px;
+    margin-top: 14px;
   }
 }
 
@@ -217,5 +223,8 @@ textarea::placeholder {
 @media only screen and (min-width: 1280px) {
   .contact-us-watches-img {
     width: 530px;
+    margin-top: 84px;
+    margin-left:40px;
+    margin-right: 65px;
   }
 }
