--- a/src/partials/8-contact-us.html
+++ b/src/partials/8-contact-us.html
@@ -1,90 +1,93 @@
-<section class="contact section-animation">
+<section class="contact section-animation" id="contact-us">
   <div class="container contact-container">
-    <h2 class="contact-title">Contact Us</h2>
-    <div class="contact-modal">
-      <p class="contact-text">
-        Please use the form below to contact us. Enter your name, email, phone,
-        and message and we'll get back to you shortly.
-      </p>
-      <form class="contact-form">
-        <div class="contact-input-container">
-          <input
-            class="contact-input-field"
-            type="text"
-            id="user-name"
-            name="user-name"
-            placeholder="Name"
-            required
-          />
-        </div>
-        <div class="contact-input-container">
-          <input
-            class="contact-input-field"
-            type="email"
-            id="user-email"
-            name="user-email"
-            placeholder="Email"
-            required
-            pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
-          />
-        </div>
-        <div class="contact-input-container">
-          <input
-            class="contact-input-field"
-            type="tel"
-            id="user-tel"
-            name="user-tel"
-            placeholder="+380"
-            required
-            pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
-          />
-        </div>
-        <div class="contact-input-container">
-          <textarea
-            name="user-comment"
-            id="user-comment"
-            rows="4"
-            class="contact-comment-input"
-            placeholder="Comment"
-            required
-          ></textarea>
-        </div>
-        <button type="submit" class="contact-modal-button">Send</button>
-      </form>
+    <div class="contact-info">
+      <h2 class="contact-title">Contact Us</h2>
+      <div class="contact-modal">
+        <p class="contact-text">
+          Please use the form below to contact us. Enter your name, email,
+          phone, and message and we'll get back to you shortly.
+        </p>
+        <form class="contact-form">
+          <div class="contact-input-container">
+            <input
+              class="contact-input-field"
+              type="text"
+              id="user-name"
+              name="user-name"
+              placeholder="Name"
+              required
+            />
+          </div>
+          <div class="contact-input-container">
+            <input
+              class="contact-input-field"
+              type="email"
+              id="user-email"
+              name="user-email"
+              placeholder="Email"
+              required
+              pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+            />
+          </div>
+          <div class="contact-input-container">
+            <input
+              class="contact-input-field"
+              type="tel"
+              id="user-tel"
+              name="user-tel"
+              placeholder="+380"
+              required
+              pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
+            />
+          </div>
+          <div class="contact-input-container">
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              rows="4"
+              class="contact-comment-input"
+              placeholder="Comment"
+              required
+            ></textarea>
+          </div>
+          <button type="submit" class="contact-modal-button">Send</button>
+        </form>
+      </div>
     </div>
-    <picture>
-      <source
-        media="(min-width: 1280px)"
-        srcset="
-          ./images/contact-us/contact-us-clock-desktop.jpg    1x,
-          ./images/contact-us/contact-us-clock-desktop@2x.jpg 2x
-        "
-        type="image/jpg"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          ./images/contact-us/contact-us-clock-tablet.jpg    1x,
-          ./images/contact-us/contact-us-clock-tablet@2x.jpg 2x
-        "
-        type="image/jpg"
-      />
-      <source
-        media="(max-width: 767px)"
-        srcset="
-          ./images/contact-us/contact-us-clock.jpg    1x,
-          ./images/contact-us/contact-us-clock@2x.jpg 2x
-        "
-        type="image/jpg"
-      />
-  
-      <img
-        src="./images/contact-us/contact-us-clock.jpg"
-        alt="watches"
-        width="335"
-        height="446"
-        class="contact-us-watches-img"
-      />
-    </picture>
+    <div class="contact-picture">
+      <picture>
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            ./images/contact-us/contact-us-clock-desktop.jpg    1x,
+            ./images/contact-us/contact-us-clock-desktop@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./images/contact-us/contact-us-clock-tablet.jpg    1x,
+            ./images/contact-us/contact-us-clock-tablet@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ./images/contact-us/contact-us-clock.jpg    1x,
+            ./images/contact-us/contact-us-clock@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <img
+          src="./images/contact-us/contact-us-clock.jpg"
+          alt="watches"
+          width="335"
+          height="446"
+          class="contact-us-watches-img"
+        />
+      </picture>
+    </div>
   </div>
 </section>
