add transition and class

--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero section-animation" id="hero">
   <div class="container">
     <div class="hero-container">
       <div class="hero-text-wrapper">
