--- a/src/partials/7-reviews.html
+++ b/src/partials/7-reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews section-animation" id="reviews">
   <div class="container">
     <h2 class="reviews-title">Reviews</h2>
     <ul class="reviews-list">
