--- a/src/css/5-advertisement.css
+++ b/src/css/5-advertisement.css
@@ -45,6 +45,8 @@ desktop padding:top 50px padding-bottom: 50px) */
   color: var(--background);
   background-color: transparent;
 
+  text-align: center;
+
   width: 160px;
   height: 48px;
   padding: 15px 0;
