--- a/src/partials/5-advertisement.html
+++ b/src/partials/5-advertisement.html
@@ -5,8 +5,6 @@
       Choose <span class="advertisement-story">your story</span>, making every
       moment unique. Time is your style, and we reveal it.
     </h3>
-    <button class="advertisement-btn" type="button" href="#contact-us">
-      Contact Us
-    </button>
+    <a class="advertisement-btn" href="#contact-us"> Contact Us </a>
   </div>
 </section>
