--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -16,17 +16,38 @@
       </p>
       <button class="about-btn" type="button">View catalog</button>
     </div>
-    <div class="about-img">
+    <div class="about-img-div">
       <picture>
-        <source media="(min-width: 1280px)" srcset="" type="image/jpg" />
-        <source media="(min-width: 768px)" srcset="" type="image/jpg" />
-        <source media="(max-width: 767px)" srcset="" type="image/jpg" />
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            ./images/abt-us/abt_us_desktop.jpg    1x,
+            ./images/abt-us/abt_us_desktop@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./images/abt-us/abt_us_tablet.jpg    1x,
+            ./images/abt-us/abt_us_tablet@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ./images//abt-us/abt_us.jpg   1x,
+            ./images/abt-us/abt_us@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
         <img
-          src=""
-          alt="The wristwatch shows that it is a beautiful Sunday morning"
-          width=""
-          height=""
-          loading="lazy"
+          src="./images/abt-us/abt_us.jpg"
+          alt="team"
+          width="108"
+          height="44"
+          class="about-img"
         />
       </picture>
     </div>
