--- a/src/partials/6-sale.html
+++ b/src/partials/6-sale.html
@@ -5,53 +5,55 @@
       <ul class="items-example">
         <li class="sale-item-picture">
           <picture>
-            <source media="(max-width:767px)" srcset="../images/sale/clock-tel9.png 1x, 
-                      ../images/sale/clock-tel10@2x.png 2x" type="image/png">
-            <source media="(min-width:768px)" srcset="../images/sale/clock-desk-tabl9.png 1x, 
-                      ../images/sale/clock-desk-tabl10@2x.png 2x" type="image/png">
-            <img class="watch-example" src="../images/sale/clock-desk-tabl9.png" alt="watch front mode 1" width="96"
+            <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl9.png 1x, 
+            ./images/sale/clock-desk-tabl10@2x.png 2x" type="image/png">
+            <source media="(max-width:767px)" srcset="./images/sale/clock-tel9.png 1x, 
+            ./images/sale/clock-tel10@2x.png 2x" type="image/png">
+            <img class="watch-example" src="./images/sale/clock-desk-tabl9.png" alt="watch front mode 1" width="96"
               height="100" loading="lazy" />
           </picture>
         </li>
         <li class="sale-item-picture">
           <picture>
-            <source media="(max-width:767px)" srcset="../images/sale/clock-tel7.png 1x, 
-                                ../images/sale/clock-tel8@2x.png 2x" type="image/png">
-            <source media="(min-width:768px)" srcset="../images/sale/clock-desk-tabl5.png 1x, 
-                                ../images/sale/clock-desk-tabl6@2x.png 2x" type="image/png">
-            <img class="watch-example" src="../images/sale/clock-desk-tabl5.png" alt="watch front mode time" width="96"
+            <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl5.png 1x, 
+            ./images/sale/clock-desk-tabl6@2x.png 2x" type="image/png">
+            <source media="(max-width:767px)" srcset="./images/sale/clock-tel7.png 1x, 
+            ./images/sale/clock-tel8@2x.png 2x" type="image/png">
+            <img class="watch-example" src="./images/sale/clock-desk-tabl5.png" alt="watch front mode time" width="96"
               height="100" loading="lazy" />
           </picture>
         </li>
         <li class="sale-item-picture">
           <picture>
-            <source media="(max-width:767px)" srcset="../images/sale/clock-tel3.png 1x, 
-                                          ../images/sale/clock-tel4@2x.png 2x" type="image/png">
-            <source media="(min-width:768px)" srcset="../images/sale/clock-desk-tabl3.png 1x, 
-                                          ../images/sale/clock-desk-tabl4@2x.png 2x" type="image/png">
-            <img class="watch-example" src="../images/sale/clock-desk-tabl3.png" alt="watch sadeways" width="96"
+            <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl3.png 1x, 
+            ./images/sale/clock-desk-tabl4@2x.png 2x" type="image/png">
+            <source media="(max-width:767px)" srcset="./images/sale/clock-tel3.png 1x, 
+            ./images/sale/clock-tel4@2x.png 2x" type="image/png">
+            <img class="watch-example" src="./images/sale/clock-desk-tabl3.png" alt="watch sadeways" width="96"
               height="100" loading="lazy" />
           </picture>
         </li>
         <li class="sale-item-picture">
           <picture>
-            <source media="(max-width:767px)" srcset="../images/sale/clock-tel5.png 1x, 
-                                          ../images/sale/clock-tel6@2x.png 2x" type="image/png">
-            <source media="(min-width:768px)" srcset="../images/sale/clock-desk-tabl7.png 1x, 
-                                          ../images/sale/clock-desk-tabl8@2x.png 2x" type="image/png">
-            <img class="watch-example" src="../images/sale/clock-desk-tabl7.png" alt="watch back view" width="96"
+            <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl7.png 1x, 
+            ./images/sale/clock-desk-tabl8@2x.png 2x" type="image/png">
+            <source media="(max-width:767px)" srcset="./images/sale/clock-tel5.png 1x, 
+            ./images/sale/clock-tel6@2x.png 2x" type="image/png">
+            <img class="watch-example" src="./images/sale/clock-desk-tabl7.png" alt="watch back view" width="96"
               height="100" loading="lazy" />
           </picture>
         </li>
       </ul>
-      <picture class="sale-main-pic">
-        <source media="(max-width:767px)" srcset="../images/sale/clock-tel1.png 1x, 
-                                      ../images/sale/clock-tel2@2x.png 2x" type="image/png">
-        <source media="(min-width:768px)" srcset="../images/sale/clock-desk-tabl1x.png 1x, 
-                                      ../images/sale/clock-desk-tabl2@2x.png 2x" type="image/png">
-        <img class="watch-example" src="../images/sale/clock-desk-tabl1x.png" alt="watch main picture" width="428"
-          height="558" loading="lazy" />
-      </picture>
+      <div class="sale-main-pic">
+        <picture>
+          <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl1x.png 1x, 
+        ./images/sale/clock-desk-tabl2@2x.png 2x" type="image/png">
+          <source media="(max-width:767px)" srcset="./images/sale/clock-tel1.png 1x, 
+        ./images/sale/clock-tel2@2x.png 2x" type="image/png">
+          <img class="watch-example" src="./images/sale/clock-desk-tabl1x.png" alt="watch main picture" width="428"
+            height="558" loading="lazy" />
+        </picture>
+      </div>
       <div class="sale-description-container">
         <h3 class="sale-description-title">MARQ® Commander (Gen 2) - Carbon Edition</h3>
         <p class="product-tag"> Product tag: 706587</p>
