--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -1,5 +1,5 @@
-<section class="about" id="about">
-  <div class="container">
+<div class="container">
+  <section class="about" id="about">
     <div class="about-welcome">
       <h2 class="about-title">About Us</h2>
       <p class="about-text">
@@ -10,7 +10,7 @@
       </p>
       <p class="about-text">
         At our premium watch collection, we believe that a watch is more than
-        just a timekeeping device &mdash it's a statement piece that reflects
+        just a timekeeping device &mdash; it's a statement piece that reflects
         your personality and style. So why settle for anything less than the
         best?
       </p>
@@ -51,5 +51,5 @@
         />
       </picture>
     </div>
-  </div>
-</section>
+  </section>
+</div>
