--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -2,7 +2,7 @@
 
 .about-welcome {
     border-radius: 30px;
-    background-color: #f3f3f3;
+    background-color: var(--cards);
     padding: 40px 20px;
     margin-bottom: 20px;
 }
@@ -12,7 +12,7 @@
     font-size: 48px;
     line-height: 0.91667;
     letter-spacing: -0.02em;
-    color: #0c0c0c;
+    color: var(--main);
     margin-bottom: 8px;
 }
 
@@ -33,7 +33,7 @@
     font-size: 14px;
     line-height: 1.29;
     text-align: center;
-    color: #fbfbfb;
+    color: var(--background);
 
     border-radius: 16px;
     width: 160px;
@@ -42,22 +42,24 @@
     cursor: pointer;
     border: none;
 
-    background-color: #3350e9;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: var(--accent);
+    transition: background-color 275ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .about-btn:hover,
 .about-btn:focus {
-    background-color: #1f3cd4;
+    background-color:var(--accent);
 }
 
 .about-img-div {
-    background-color: gray;
+    background-color: rgba(12, 12, 12, 0.2);
     border-radius: 30px;
 }
 
 .about-img{
     width: 100%;
+    height: 100%;
+    border-radius: 30px;
 }
 
 
@@ -74,6 +76,13 @@
     .about-btn {
         margin-top: 60px;
     }
+
+    .about-img-div {
+        border-radius: 50px;
+    }
+
+    .about-img {
+        border-radius: 50px;}
 }
 
 @media only screen and (min-width: 1280px) {
@@ -85,6 +94,7 @@
     }
 
     .about-welcome {
+        margin-bottom: 0;
     }
 
     .about-btn {
