--- a/src/partials/6-sale.html
+++ b/src/partials/6-sale.html
@@ -57,31 +57,34 @@
       <div class="sale-description-container">
         <h3 class="sale-description-title">MARQ® Commander (Gen 2) - Carbon Edition</h3>
         <p class="product-tag"> Product tag: 706587</p>
-        <p class="price-tag">€1500 <span class="price crossed">€3000</span></p>
-        <p class="item-description">The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for
-          adventurers
-          that takes materials and features
-          to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a precise
-          AMOLED
-          touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.</p>
+        <div class="sale-price"><span class="price-tag">€1500</span><span class="price-crossed">€3000</span></div>
+        <div class="item-description">
+          <p class="item-description-text">The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for
+            adventurers
+            that takes materials and features
+            to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a
+            precise
+            AMOLED
+            touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.</p>
+        </div>
         <ul class="sale-item-features">
           <li class="sale-features-item">
-            <p>Fused carbon fiber </p>
+            <p class="feature-text">Fused carbon fiber </p>
           </li>
           <li class="sale-features-item">
-            <p>Grade-5 Titanuim</p>
+            <p class="feature-text">Grade-5 Titanuim</p>
           </li>
           <li class="sale-features-item">
-            <p>Athlete</p>
+            <p class="feature-text">Athlete</p>
           </li>
           <li class="sale-features-item">
-            <p>Golfer</p>
+            <p class="feature-text">Golfer</p>
           </li>
           <li class="sale-features-item">
-            <p>Commander</p>
+            <p class="feature-text">Commander</p>
           </li>
           <li class="sale-features-item">
-            <p>Adventurer</p>
+            <p class="feature-text">Adventurer</p>
           </li>
         </ul>
       </div>
