--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -31,6 +31,7 @@
             href="https://www.facebook.com/goITclub/"
             target="_blank"
             referrerpolicy="no-referrer"
+            aria-label="Open facebook"
           >
             <svg class="header-socials-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-facebook"></use>
@@ -43,6 +44,7 @@
             href="https://www.instagram.com/goitclub/"
             target="_blank"
             referrerpolicy="no-referrer"
+            aria-label="Open instagram"
           >
             <svg class="header-socials-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-instagram"></use>
@@ -55,6 +57,7 @@
             href="https://www.youtube.com/c/GoIT"
             target="_blank"
             referrerpolicy="no-referrer"
+            aria-label="Open youtube"
           >
             <svg class="header-socials-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-youtube"></use>
@@ -63,7 +66,7 @@
         </li>
       </ul>
     </div>
-    <button class="header-burger">
+    <button class="header-burger" aria-label="Open or close menu">
       <span class="header-burger-span"></span>
     </button>
   </div>
