--- a/src/css/6-sale.css
+++ b/src/css/6-sale.css
@@ -44,14 +44,23 @@ margin-bottom: 24px;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
-    row-gap: 20px;
+    gap: 20px;
 }
 
 @media only screen and (min-width: 768px) {
-  div.salewrapper {
-    column-gap: 20px;
-    row-gap: 40px;
+  .salewrapper {
+    gap: 40px;
   }
+}
+
+.picture-wrapper {
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+        gap: 20px;
+        max-width: 100%;
 }
 
 .items-example {
@@ -117,7 +126,6 @@ margin-bottom: 24px;
     width: 428px;
     height: 558px;
     padding: 50px;
-    margin-right: 20px;
 
     }
 }
@@ -161,8 +169,6 @@ color: var(--background);
         max-width: 436px;
   }
 }
-
-.watch-example {}
 
 .product-tag {
     color: rgba(251, 251, 251, 0.50);
