--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -28,7 +28,10 @@
 
 .about-btn {
     margin-top: 40px;
+    display: flex;
+    flex-direction: column;
 
+  
     font-weight: 500;
     font-size: 14px;
     line-height: 1.29;
@@ -40,7 +43,6 @@
     height: 48px;
 
     cursor: pointer;
-    border: none;
 
     background-color: var(--accent);
     transition: background-color 275ms cubic-bezier(0.4, 0, 0.2, 1);
