--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <section class="about" id="about">
+<section class="about" id="about">
+  <div class="container">
     <div class="about-welcome">
       <h2 class="about-title">About Us</h2>
       <p class="about-text">
@@ -14,7 +14,7 @@
         your personality and style. So why settle for anything less than the
         best?
       </p>
-      <button class="about-btn" type="button">View catalog</button>
+      <a class="about-btn">View catalog</a>
     </div>
     <div class="about-img-div">
       <picture>
@@ -51,5 +51,5 @@
         />
       </picture>
     </div>
-  </section>
-</div>
+  </div>
+</section>
