--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -29,8 +29,7 @@
 .about-btn {
     margin-top: 40px;
     display: flex;
-    flex-direction: column;
-
+    align-items: center;
   
     font-weight: 500;
     font-size: 14px;
