--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -1,4 +1,6 @@
-.about {}
+.about {
+    padding: 30px 0;
+}
 
 .about-welcome {
     border-radius: 30px;
@@ -66,6 +68,11 @@
 
 
 @media only screen and (min-width: 768px) {
+    .about {
+            padding: 40px 0;
+        }
+
+
     .about-welcome {
         padding: 80px 60px;
     }
@@ -92,6 +99,7 @@
         flex-direction: row;
         align-content: center;
         gap: 40px;
+        padding: 50px 0;
     }
 
     .about-welcome {
