--- a/src/css/5-advertisement.css
+++ b/src/css/5-advertisement.css
@@ -72,6 +72,10 @@ desktop padding:top 50px padding-bottom: 50px) */
 }
 
 @media screen and (min-width: 768px) {
+  .advertisement {
+    padding: 40px 0;
+  }
+
   .advertisement .container {
     background-image: url(../images/advertisement/advertisement-tablet.png);
     max-width: 704px;
@@ -96,6 +100,10 @@ desktop padding:top 50px padding-bottom: 50px) */
 }
 
 @media screen and (min-width: 1280px) {
+  .advertisement {
+    padding: 50px 0;
+  }
+
   .advertisement .container {
     background-image: url(../images/advertisement/advertisement-desktop.png);
     max-width: 1150px;
