--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -32,6 +32,7 @@
     margin-top: 40px;
     display: flex;
     align-items: center;
+    justify-content: center;
   
     font-weight: 500;
     font-size: 14px;
