--- a/src/css/3-about-us.css
+++ b/src/css/3-about-us.css
@@ -25,7 +25,7 @@
     letter-spacing: -0.02em;
     color: rgba(12, 12, 12, 0.7);
 
-    padding-top: 20px;
+    margin-bottom: 20px;
 }
 
 .about-btn {
