fix-header-active-nav-item

--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -5,22 +5,22 @@
       <nav class="header-nav">
         <ul class="header-nav-list">
           <li class="header-nav-item header-nav-item-active">
-            <a href="#" class="header-nav-link">Home</a>
+            <a href="#hero" class="header-nav-link">Home</a>
           </li>
           <li class="header-nav-item">
-            <a href="#" class="header-nav-link">About Us</a>
+            <a href="#about-us" class="header-nav-link">About Us</a>
           </li>
           <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Catalog</a>
+            <a href="#catalog" class="header-nav-link">Catalog</a>
           </li>
           <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Sale</a>
+            <a href="#sale" class="header-nav-link">Sale</a>
           </li>
           <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Reviews</a>
+            <a href="#reviews" class="header-nav-link">Reviews</a>
           </li>
           <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Contact Us</a>
+            <a href="#contact-us" class="header-nav-link">Contact Us</a>
           </li>
         </ul>
       </nav>
